# bgcut

./: CMakeLists.txt  LICENSE  README.md  main.cpp
